--- a/.env
+++ b/.env
@@ -9,11 +9,13 @@ DB_PORT=3306
 MYSQLDB_USER=root
 MYSQLDB_ROOT_PASSWORD=123456
 MYSQLDB_DATABASE=mark_hotel_db
-MYSQLDB_LOCAL_PORT=3307
+MYSQLDB_LOCAL_PORT=3306
 MYSQLDB_DOCKER_PORT=3306
 
 NODE_LOCAL_PORT=3333
-NODE_DOCKER_PORT=8080
+NODE_DOCKER_PORT=3333
+QUEUE_ADDRESS='amqp://admin:passw123@rabbitmq_management'
+QUEUE_ADDRESS_LOCAL='amqp://admin:passw123@localhost'
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
@@ -22,4 +24,5 @@ NODE_DOCKER_PORT=8080
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:123456@localhost:3307/mark_hotel_db"
+DATABASE_URL="mysql://root:123456@localhost:3306/mark_hotel_db"
+DATABASE_URL_DOCKER="mysql://root:123456@mark_hotel_database/mark_hotel_db"
