--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "docker-compose-up:dev": "docker-compose up -d"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.1",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -36,6 +37,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.2.0",
+    "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
